Add latest extension download page
